package com.narxoz.rpg.arena;

public class ArenaFighter {
    private final String name;
    private int health;
    private final int maxHealth;
    private double dodgeChance;
    private final int blockRating;
    private final int armorValue;
    private final int attackPower;
    private int healPotions;

    public ArenaFighter(String name, int health, double dodgeChance,
                        int blockRating, int armorValue, int attackPower, int healPotions) {
        this.name = name;
        this.health = health;
        this.maxHealth = health;
        this.dodgeChance = dodgeChance;
        this.blockRating = blockRating;
        this.armorValue = armorValue;
        this.attackPower = attackPower;
        this.healPotions = healPotions;
    }

    public String getName() { return name; }
    public int getHealth() { return health; }
    public int getMaxHealth() { return maxHealth; }
    public double getDodgeChance() { return dodgeChance; }
    public int getBlockRating() { return blockRating; }
    public int getArmorValue() { return armorValue; }
    public int getAttackPower() { return attackPower; }
    public int getHealPotions() { return healPotions; }

    public void takeDamage(int amount) {
        this.health = this.health - amount;
        if (this.health < 0) {
            this.health = 0;
        }
    }

    public void heal(int amount) {
        if (this.healPotions > 0) {
            this.health = this.health + amount;
            
            if (this.health > maxHealth) {
                this.health = maxHealth;
            }
            this.healPotions--; 
        }
    }

    public void modifyDodgeChance(double delta) {
        this.dodgeChance = this.dodgeChance + delta;
        
        if (this.dodgeChance < 0) {
            this.dodgeChance = 0;
        }
        if (this.dodgeChance > 1.0) {
            this.dodgeChance = 1.0;
        }
    }

    public boolean isAlive() {
        return this.health > 0;
    }
}
