' Generated by UML Generator
' Encoded: hLT9SzCm5BxdLsY6YqkJ3kSCT9esC6McG6axS60uAF9hegai1KdkmlRRUP8TIxALiFMIDc_v_BtTEJAMQbjNOcHkk5nJJIl213LcPgtcYzh2QwRa9VyAvDbenKiWZ6icO3JoLcIcGT9NVBcoeCct4I4JIIkOaalqbaltVGLKsDMKS6dTruhUdwQIKfLBE5bHoT2lLFK2qL6y48hTN52BC9qfrPNI7wYe8OYifUpcNDs1xcJkaUVASYLD9vlWntxCjeY9Zab4SqmobCQaJsXCUdHGq2FJmCPKzXoD9TYt-F1YBygJ4pQ9SUA6j9EzsUGh5Sy3GwVeqkPqnu5ewZJh-FRaWNQgE0ti8uMbDp2d5Lr2GIjLIzj4DYMtYfVEm0MzHLMfaby_nEnB49Pk8eWikPa9VkkPBfGIGENeHz9rxzPh9K7QVsoxNEE49jc0x-gIFi9VrpQVzz-cLuEnIaEBcBVPbRqhLMiNbhGNO6hH9l2EI-a22IdK25o62H8A-_wC6_kyCJaaBuY4Eoo6fWzUVbZiTLd4y3vwn3GJfXEdpukee-U5VtAK4zF98bAH3otBCowX4FYHXpnJVXXY_d4_uM2SKbcApHRBR9gsEO9bqJFozLzvNS4bKnK-f2basp2uQf79D5cQ6vOT5p-z2HU_UCv1Ct1r3XlI4uhDYvpb_xAY2sCrPROv2sGEro0D90GbtAD_gka8OkdUehx86Urbl9uiMuUiSeqShfJNbtyQn6DKnM-i9EWjPqkZZQgcvCB_xR8G-nVPys80oYaH2XltKHYVhcEw_uE7Dg2lAGCoO-uMdAYgGZIF-nFkWU5RGX6I_HC7LCNVtRa2mpHVE-ze7uJvyxZlQwYXIUuNzsyxhSb3ToyTaDwnO1McCl6BUi7HEwF6HXJtsoXcGXJfscZT8_vcnnhn-pnEpoH9xUQeR3i_JKVFtLxlRPqOkCXYRZb7m_Bizygp__lo-34ijyVLjamt5STAcU6cIb2A743xufMuFruKxbx-KGpkoC_2LVNLOhQcmY7Crcl1tQJ6zOcWjmJMmtoygDvGBfi9_uQlyfQp7wH24TwcfTbOV_eys0xX7U2bNEBHR3Ao0gs6-L1jYsMws4VVnog6C6Eo1SGdGjSoOBWW-syeZdToeoUJxuVzwv0O71mSfd4aPpNddXWCt7jdx-baqlVlMGmHuWkI8v0O3Dp3Ei_v1kt0CTwj2cadQt6Khgo30uJUPU3YJfiWtGqPWDIW0-ZYYgOounsh1xw39luBYow0WOdBuA01Zp06_9Ny2m
' URL: http://www.plantuml.com/plantuml/uml/hLT9SzCm5BxdLsY6YqkJ3kSCT9esC6McG6axS60uAF9hegai1KdkmlRRUP8TIxALiFMIDc_v_BtTEJAMQbjNOcHkk5nJJIl213LcPgtcYzh2QwRa9VyAvDbenKiWZ6icO3JoLcIcGT9NVBcoeCct4I4JIIkOaalqbaltVGLKsDMKS6dTruhUdwQIKfLBE5bHoT2lLFK2qL6y48hTN52BC9qfrPNI7wYe8OYifUpcNDs1xcJkaUVASYLD9vlWntxCjeY9Zab4SqmobCQaJsXCUdHGq2FJmCPKzXoD9TYt-F1YBygJ4pQ9SUA6j9EzsUGh5Sy3GwVeqkPqnu5ewZJh-FRaWNQgE0ti8uMbDp2d5Lr2GIjLIzj4DYMtYfVEm0MzHLMfaby_nEnB49Pk8eWikPa9VkkPBfGIGENeHz9rxzPh9K7QVsoxNEE49jc0x-gIFi9VrpQVzz-cLuEnIaEBcBVPbRqhLMiNbhGNO6hH9l2EI-a22IdK25o62H8A-_wC6_kyCJaaBuY4Eoo6fWzUVbZiTLd4y3vwn3GJfXEdpukee-U5VtAK4zF98bAH3otBCowX4FYHXpnJVXXY_d4_uM2SKbcApHRBR9gsEO9bqJFozLzvNS4bKnK-f2basp2uQf79D5cQ6vOT5p-z2HU_UCv1Ct1r3XlI4uhDYvpb_xAY2sCrPROv2sGEro0D90GbtAD_gka8OkdUehx86Urbl9uiMuUiSeqShfJNbtyQn6DKnM-i9EWjPqkZZQgcvCB_xR8G-nVPys80oYaH2XltKHYVhcEw_uE7Dg2lAGCoO-uMdAYgGZIF-nFkWU5RGX6I_HC7LCNVtRa2mpHVE-ze7uJvyxZlQwYXIUuNzsyxhSb3ToyTaDwnO1McCl6BUi7HEwF6HXJtsoXcGXJfscZT8_vcnnhn-pnEpoH9xUQeR3i_JKVFtLxlRPqOkCXYRZb7m_Bizygp__lo-34ijyVLjamt5STAcU6cIb2A743xufMuFruKxbx-KGpkoC_2LVNLOhQcmY7Crcl1tQJ6zOcWjmJMmtoygDvGBfi9_uQlyfQp7wH24TwcfTbOV_eys0xX7U2bNEBHR3Ao0gs6-L1jYsMws4VVnog6C6Eo1SGdGjSoOBWW-syeZdToeoUJxuVzwv0O71mSfd4aPpNddXWCt7jdx-baqlVlMGmHuWkI8v0O3Dp3Ei_v1kt0CTwj2cadQt6Khgo30uJUPU3YJfiWtGqPWDIW0-ZYYgOounsh1xw39luBYow0WOdBuA01Zp06_9Ny2m
' Generated on: 2026-03-31T20:15:35.049002200

@startuml
skinparam classAttributeIconSize 0
hide circle

class ArenaFighter {
  -name: String
  -health: int
  -maxHealth: int
  -dodgeChance: double
  -blockRating: int
  -armorValue: int
  -attackPower: int
  -healPotions: int
  --
  +ArenaFighter(name: String, health: int, dodgeChance: double, blockRating: int, armorValue: int, attackPower: int, healPotions: int)
  +getName(): String
  +getHealth(): int
  +getMaxHealth(): int
  +getDodgeChance(): double
  +getBlockRating(): int
  +getArmorValue(): int
  +getAttackPower(): int
  +getHealPotions(): int
  +takeDamage(amount: int): void
  +heal(amount: int): void
  +modifyDodgeChance(delta: double): void
  +isAlive(): boolean
}

class ArenaOpponent {
  -name: String
  -health: int
  -maxHealth: int
  -attackPower: int
  --
  +ArenaOpponent(name: String, health: int, attackPower: int)
  +getName(): String
  +getHealth(): int
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +restoreHealth(amount: int): void
  +isAlive(): boolean
}

class TournamentResult {
  -winner: String
  -rounds: int
  -log: List<String> = new ArrayList<>()
  --
  +getWinner(): String
  +setWinner(winner: String): void
  +getRounds(): int
  +setRounds(rounds: int): void
  +addLine(line: String): void
  +getLog(): List<String>
}

class ArmorHandler {
  -armorValue: int
  --
  +ArmorHandler(armorValue: int)
  +handle(incomingDamage: int, target: ArenaFighter): void
}

class BlockHandler {
  -blockPercent: double
  --
  +BlockHandler(blockPercent: double)
  +handle(incomingDamage: int, target: ArenaFighter): void
}

abstract class DefenseHandler {
  -next: DefenseHandler
  --
  +setNext(next: DefenseHandler): DefenseHandler
  #getNext(): DefenseHandler
  #passToNext(damage: int, target: ArenaFighter): void
  +handle(incomingDamage: int, target: ArenaFighter): void
}

class DodgeHandler {
  -dodgeChance: double
  -random: Random
  --
  +DodgeHandler(dodgeChance: double, seed: long)
  +handle(incomingDamage: int, target: ArenaFighter): void
}

class HpHandler {
  +handle(incomingDamage: int, target: ArenaFighter): void
}

interface ActionCommand {
  ~execute(): void
  ~undo(): void
  ~getDescription(): String
}

class ActionQueue {
  -queue: List<ActionCommand> = new ArrayList<>()
  --
  +enqueue(cmd: ActionCommand): void
  +undoLast(): void
  +executeAll(): void
  +getCommandDescriptions(): List<String>
}

class AttackCommand {
  -target: ArenaOpponent
  -attackPower: int
  -damageDealt: int
  --
  +AttackCommand(target: ArenaOpponent, attackPower: int)
  +execute(): void
  +undo(): void
  +getDescription(): String
}

class DefendCommand {
  -target: ArenaFighter
  -dodgeBoost: double
  --
  +DefendCommand(target: ArenaFighter, dodgeBoost: double)
  +execute(): void
  +undo(): void
  +getDescription(): String
}

class HealCommand {
  -target: ArenaFighter
  -healAmount: int
  -actualHealApplied: int
  --
  +HealCommand(target: ArenaFighter, healAmount: int)
  +execute(): void
  +undo(): void
  +getDescription(): String
}

class Main {
  +{static} main(args: String[]): void
}

class TournamentEngine {
  -hero: ArenaFighter
  -opponent: ArenaOpponent
  --
  +TournamentEngine(hero: ArenaFighter, opponent: ArenaOpponent)
  +runTournament(): TournamentResult
}

ArmorHandler --|> DefenseHandler
ArmorHandler ..> ArenaFighter
BlockHandler --|> DefenseHandler
BlockHandler ..> ArenaFighter
DefenseHandler *-- DefenseHandler
DefenseHandler ..> ArenaFighter
DodgeHandler --|> DefenseHandler
DodgeHandler ..> ArenaFighter
HpHandler --|> DefenseHandler
HpHandler ..> ArenaFighter
ActionQueue o-- ActionCommand
AttackCommand ..|> ActionCommand
AttackCommand *-- ArenaOpponent
DefendCommand ..|> ActionCommand
DefendCommand *-- ArenaFighter
HealCommand ..|> ActionCommand
HealCommand *-- ArenaFighter
TournamentEngine *-- ArenaFighter
TournamentEngine *-- ArenaOpponent
TournamentEngine ..> TournamentResult
@enduml